# nomic_faiss_rag

./: .gitignore  README.md  app.py  embedder.py  ingest.py  pyproject.toml  rag.py  requirements.txt  test_questions.py
docs/: README.txt
templates/: index.html
