[project]
name = "nomic_faiss_rag"
version = "1.0.0"
description = "A local Retrieval-Augmented Generation system with Nomic Embed Text + FAISS"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.36.0",
    "pymupdf>=1.24.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]